Library upgrades and jakarta renaming