@@ -71,7 +71,7 @@ public class AuthoritiesDaoTest extends HibernateOcDbTestCase {
 
         // Test Authorities
         assertNotNull("RuleSet is null", authorities);
-        assertEquals("The id of the retrieved Domain Object should be -1", new Integer(-1), authorities.getId());
+        assertEquals("The id of the retrieved Domain Object should be -1", Integer.valueOf(-1), authorities.getId());
    }
     public void testFindByUsername() {
 
@@ -82,7 +82,7 @@ public class AuthoritiesDaoTest extends HibernateOcDbTestCase {
       
         // Test Authorities
         assertNotNull("RuleSet is null", authorities);
-        assertEquals("The id of the retrieved Domain Object should be -1", new Integer(-1), authorities.getId());
+        assertEquals("The id of the retrieved Domain Object should be -1", Integer.valueOf(-1), authorities.getId());
     }
     
     
